# swift-toolchain-sqlite

./: CMakeLists.txt  LICENSE  Package.swift  README.md  update.sh
.github/: CODEOWNERS
.github/workflows/: pull_request.yml  update-sqlite.yml
Sources/: LICENSE.txt
Sources/CSQLite/include/: module.modulemap
